# video_capture-stream_v2

./: Makefile  Makefile.in  README.md  capture.c  config.h  config.status  configure~
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
src/: Makefile  Makefile.in
src/app/: Makefile  Makefile.am  Makefile.in  capture.cc  capture.hh  decoder.cc  decoder.hh  encoder.cc  encoder.hh  protocol.cc  protocol.hh  video_receiver.cc  video_sender.cc
src/app/.deps/: capture.Po  decoder.Po  encoder.Po  protocol.Po  video_receiver.Po  video_sender.Po
src/app/data/: output_20250611_181435.y4m
src/util/: Makefile  Makefile.in
src/util/.deps/: address.Po  conversion.Po  epoller.Po  file_descriptor.Po  mmap.Po  poller.Po  serialization.Po  socket.Po  split.Po  tcp_socket.Po  timerfd.Po  timestamp.Po  udp_socket.Po
src/video/: Makefile  Makefile.in  image.cc  image.hh  yuv4mpeg.hh
src/video/.deps/: image.Po  sdl.Po  v4l2.Po  webcam.Po  yuv4mpeg.Po
